--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Totally Trivial Trivia</title>
+    <title>Arizona Fun Trivia!</title>
 </head>
 
 <body>
@@ -19,15 +18,15 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-4 ">
-                <button type="button" class="btn btn-primary btn-lg btn-block" id="start">Let's do this!</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" id="start">Start the Trivia!</button>
             </div>
             <div id="counter" class="col-lg-4 col-lg-offset-4 text-center">
                 <p id="time">Time Remaining:<span id="timer"></span></p>
                 <br>
             </div>
         </div>
-        <div class="form-group text-center">
-            <p id="question">1. Which one of the following is NOT an Arizona area code?</p>
+        <div class="form-group text-center qcontainer">
+            <p>1. Which one of the following is NOT an Arizona area code?</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="goodanswer">505
@@ -42,7 +41,7 @@
                     <input type="radio" name="optradio" class="optradio" value="wrong">602
                 </label>
             </form>
-            <p id="question">2. Which one of the following states does NOT border Arizona?</p>
+            <p>2. Which one of the following states does NOT border Arizona?</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="wrong">Utah
@@ -57,7 +56,7 @@
                     <input type="radio" name="optradio" class="optradio" value="wrong">Colorado
                 </label>
             </form>
-            <p id="question">3. What year did Arizona achieve statehood?</p>
+            <p>3. What year did Arizona achieve statehood?</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="goodanswer">1912
@@ -72,7 +71,7 @@
                     <input type="radio" name="optradio" class="optradio" value="wrong">1895
                 </label>
             </form>
-            <p id="question">4. What is the state bird?</p>
+            <p>4. What is the state bird?</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="wrong">Hawk
@@ -87,7 +86,7 @@
                     <input type="radio" name="optradio" class="optradio" value="wrong">Buzzard
                 </label>
             </form>
-            <p id="question">5. What are the official state colors?</p>
+            <p>5. What are the official state colors?</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="goodanswer">Blue and Gold
@@ -102,7 +101,7 @@
                     <input type="radio" name="optradio" class="optradio" value="wrong">Black and Tan
                 </label>
             </form>
-            <p id="question">6. Arizona is the _____ state.</p>
+            <p>6. Arizona is the _____ state.</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="wrong">30th
@@ -117,7 +116,7 @@
                     <input type="radio" name="optradio" class="optradio" value="wrong">45th
                 </label>
             </form>
-            <p id="question">7. London Bridge is located in what Arizona city?</p>
+            <p>7. London Bridge is located in what Arizona city?</p>
             <form class="question">
                 <label class="radio-inline">
                     <input type="radio" name="optradio" class="optradio" value="goodanswer">Lake Havasu City
@@ -141,7 +140,6 @@
     </div>
     <!-- content container -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="assets/javascript/app.js"></script>
 </body>
 
